# omnirun.app

./: .gitignore  README.md  auth_dump.sql  env.example  package-lock.json  package.json  ~$st_of_sites.rtf
_text/: APIconnections-checklist.txt  DEVtasks-checklist.txt  Launch_promo.txt  READ FIRST.txt  Team-Collaboration.txt  Team_testing_notes.txt  UI-styles.txt  agent features.txt  branding.txt  claude-code-context-memory-detailed-guide.txt  desktop-app-control.txt  launch_platforms.txt  memory-system.txt  mobile-companion.txt  project.txt  prompt-caching.txt  scheduled-tasks-summary.txt  security-protections-checklist.txt  strategy.txt  structure.txt  supabase-backend.txt  team-features.txt  template-marketplace.txt  token-optimization-checklist.txt
app/: .gitignore  package-lock.json  package.json  tailwind.config.js
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
omni_admin/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
omni_admin/src/: App.tsx  index.css
omni_admin/src-tauri/: Cargo.toml  tauri.conf.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/wake_word/: hey_omni.onnx
src-tauri/src/: deploy.rs  lib.rs  oauth.rs  scheduler.rs  screen_control.rs  server.rs
src/data/: templateData.ts
src/services/: aiService.ts  authService.ts  connectionTool.ts  contextService.ts  dbService.ts  deploymentService.ts  emailService.ts  envService.ts  errorCapture.ts  fileService.ts  healthScanner.ts  memoryService.ts  oauthCredentialService.ts  projectDetector.ts  screenControlService.ts  snapshotService.ts  supabaseClient.ts  templateService.ts  toolService.ts  voiceService.ts
src/stores/: assistantStore.ts  authStore.ts  chatHistoryStore.ts  chatStore.ts  connectionsStore.ts  deployStore.ts  diffStore.ts  elementSelectionStore.ts  notificationStore.ts  projectStore.ts  routineStore.ts  settingsStore.ts  taskStore.ts  teamStore.ts  usageStore.ts  voiceStore.ts
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 002_waitlist.sql  003_assistant_notifications.sql  004_public_avatars_bucket.sql  005_team_shared_api_key.sql  006b_fix_admin_pricing.sql  007_team_notifications_and_locking.sql  008_waitlist_early_access.sql  009_mobile_app_templates.sql  011_mobile_framework_expo.sql  admin_rpc_functions.sql  delta-improvements.sql  full_schema.sql  live_schema_utf8.sql  templates schema.sql
supabase/static/: checkout-cancel.html
(+262 files in other folders)
