[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"

# Preview server
axum = "0.7"
tower-http = { version = "0.6", features = ["fs"] }
tokio = { version = "1", features = ["net", "rt", "time", "macros", "process"] }

# Scheduled tasks
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
uuid = { version = "1", features = ["v4"] }
dirs-next = "2"

# HTTP proxy for external APIs (avoids CORS in webview)
reqwest = { version = "0.12", features = ["json"] }
open = "5.3.3"

# Desktop app control (screenshot + input simulation)
enigo = "0.2"
screenshots = "0.8"
image = "0.24"
base64 = "0.22"

# Wake word detection (openWakeWord via ONNX Runtime + audio capture)
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.16"
whisper-rs = "0.16.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading",
] }
